# src/routes/task/index.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 import authentication from '../../middleware/authentication';
 import assignTask from './assignTask';
+import commentsRouter from './comments';
 import createTask from './createTask';
 import deleteTask from './deleteTask';
 import getTasks from './getTasks';
@@ -16,5 +17,8 @@ router.use('/', createTask);
 router.use('/', updateTask);
 router.use('/', deleteTask);
 router.use('/', assignTask);
+
+// Task comments
+router.use('/:taskId/comments', commentsRouter);
 
 export default router;
